--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>Copium</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -79,9 +79,9 @@
         </ul>
         <h1>NFT Drop Coming Soon!!</h1>
                
-        <p>A new batch of cute cats will be available very soon!</p>
+        <p>Ben Madan gets no bitches</p>
         <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
+          ><span>Join the Community monkey</span>
         </a>
       </div>
     </section>
