--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </ul>
         <h1>NFT Drop Coming Soon!!</h1>
                
-        <p>Ben Madan gets no bitches</p>
+        <p>Bart gets no bitches</p>
         <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Community monkey</span>
         </a>
