--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Copium</title>
+    <title>Kyoto Gates</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,7 +37,7 @@
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://opensea.io/collection/kyotogates"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -58,28 +58,28 @@
           data-date="Feb 17, 2022 4:00:00 PM UTC"
         >
           <li class="clock-item">
-            <span class="count-number days">20</span>
+            <span class="count-number days">18</span>
             <p class="count-text">Days</p>
           </li>
 
           <li class="clock-item">
-            <span class="count-number hours">20</span>
-            <p class="count-text">Hour</p>
+            <span class="count-number hours">18</span>
+            <p class="count-text">Hours</p>
           </li>
 
           <li class="clock-item">
-            <span class="count-number minutes">20</span>
-            <p class="count-text">Min</p>
+            <span class="count-number minutes">18</span>
+            <p class="count-text">Mins</p>
           </li>
 
           <li class="clock-item">
-            <span class="count-number seconds">20</span>
-            <p class="count-text">Sec</p>
+            <span class="count-number seconds">18</span>
+            <p class="count-text">Secs</p>
           </li>
         </ul>
         <h1>NFT Drop Coming Soon!!</h1>
                
-        <p>Bart gets no bitches</p>
+        <p>Jason gets no bitches</p>
         <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Community monkey</span>
         </a>
