--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
         >
           <li class="clock-item">
             <span class="count-number days">24</span>
-            <p class="count-text">Days</p>
+            <p class="count-text">Day</p>
           </li>
 
           <li class="clock-item">
             <span class="count-number hours">24</span>
-            <p class="count-text">Hours</p>
+            <p class="count-text">Hour</p>
           </li>
 
           <li class="clock-item">
             <span class="count-number minutes">24</span>
-            <p class="count-text">Mins</p>
+            <p class="count-text">Min</p>
           </li>
 
           <li class="clock-item">
             <span class="count-number seconds">24</span>
-            <p class="count-text">Secs</p>
+            <p class="count-text">Sec</p>
           </li>
         </ul>
         <h1>NFT Drop Coming Soon!!</h1>
