--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         </ul>
         <h1>NFT Drop Coming Soon!!</h1>
                
-        <p>Jason gets no bitches</p>
+        <p>Join Discord for Whitelist Information</p>
         <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Join the Community monkey</span>
+          ><span>Join the Kyoto Gates Community</span>
         </a>
       </div>
     </section>
