added.discord.js/fille/users/nickabooch/among

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/A9CnsVzzkZ"
+            href="https://discord.gg/BWUKCkM8"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -80,7 +80,7 @@
         <h1>NFT Drop Coming Soon!!</h1>
                
         <p>Join Discord for Whitelist Information</p>
-        <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
+        <a href="https://discord.gg/BWUKCkM8" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Kyoto Gates Community</span>
         </a>
       </div>
